<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottom_sheet"
    style="@style/BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_mini_play_arrow_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_arrow_down"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_mini_play"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_mini_song_previous"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/song_circle_image_white"
                android:padding="1dp"
                android:src="@drawable/ic_previous_circle" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_mini_song_play_and_pause"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/song_circle_image_red"
                android:contentDescription="@string/stop"
                android:padding="1dp"
                android:src="@drawable/ic_stop_circle" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_mini_song_next"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/song_circle_image_white"
                android:padding="1dp"
                android:src="@drawable/ic_next_circle" />

            <LinearLayout
                android:id="@+id/layout_drag_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_mini_song_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/select_song_to_play"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_mini_song_album_and_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/select_song_to_play"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_song_thumbnail"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/app_icon_background"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_song_duration_counting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_song_duration"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_song_max_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/default_song_duration"
            android:textColor="@android:color/white" />

        <SeekBar
            android:id="@+id/seek_bar_song"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@id/tv_song_duration_counting"
            android:clickable="true"
            android:focusable="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/select_song_to_play"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_song_album_and_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/select_song_to_play"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_song_shuffle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/song_circle_image_red"
            android:contentDescription="@string/shuffle_off"
            android:padding="1dp"
            android:src="@drawable/ic_shuffle_circle" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_song_previous"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/song_circle_image_white"
            android:padding="1dp"
            android:src="@drawable/ic_previous_circle" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_song_play_and_pause"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/song_circle_image_red"
            android:contentDescription="@string/stop"
            android:padding="2dp"
            android:src="@drawable/ic_stop_circle" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_song_next"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/song_circle_image_white"
            android:padding="1dp"
            android:src="@drawable/ic_next_circle" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_song_repeat"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/song_circle_image_red"
            android:contentDescription="@string/repeat_off"
            android:padding="1dp"
            android:src="@drawable/ic_repeat_circle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_volume_down"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_volume_down" />

        <SeekBar
            android:id="@+id/seek_bar_volume"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_volume_up"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_volume_up" />

    </LinearLayout>

</LinearLayout>
